--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bexily ERP Software Development Company in India</title>
+    <title>Bexily  -  trERP Software Development Company in India</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -1555,6 +1555,7 @@
         });
     </script>
 </body>
+
 
 
 </html>
