--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                 <ul class="navbar-nav ms-auto align-items-lg-center">
 
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 
 
 
@@ -336,7 +336,7 @@
                 <a href="#home" class="nav-link-item">
                     <i class="fas fa-home"></i> Home
                 </a>
-                <a href="#about" class="nav-link-item">
+                <a href="about.html" class="nav-link-item">
                     <i class="fas fa-info-circle"></i> About
                 </a>
                 <a href="#contact" class="nav-link-item">
