--- a/about.html
+++ b/about.html
@@ -402,7 +402,7 @@
             <div class="row g-4">
                 <div class="col-lg col-md-6">
                     <div class="abt-process-card">
-                        <div class="abt-process-step">01</div>
+                        <div class="abt-process-step">Understand</div>
                         <div class="abt-process-icon"><i class="bi bi-search"></i></div>
                         <h5 class="abt-process-title">Understand</h5>
                         <p class="abt-process-desc">We understand your business needs</p>
@@ -411,7 +411,7 @@
                 </div>
                 <div class="col-lg col-md-6">
                     <div class="abt-process-card">
-                        <div class="abt-process-step">02</div>
+                        <div class="abt-process-step">Plan</div>
                         <div class="abt-process-icon"><i class="bi bi-diagram-3"></i></div>
                         <h5 class="abt-process-title">Plan</h5>
                         <p class="abt-process-desc">We plan the right solution</p>
@@ -420,7 +420,7 @@
                 </div>
                 <div class="col-lg col-md-6">
                     <div class="abt-process-card">
-                        <div class="abt-process-step">03</div>
+                        <div class="abt-process-step">Develop</div>
                         <div class="abt-process-icon"><i class="bi bi-code-slash"></i></div>
                         <h5 class="abt-process-title">Develop & Test</h5>
                         <p class="abt-process-desc">We develop and test the system</p>
@@ -429,7 +429,7 @@
                 </div>
                 <div class="col-lg col-md-6">
                     <div class="abt-process-card">
-                        <div class="abt-process-step">04</div>
+                        <div class="abt-process-step">Implement</div>
                         <div class="abt-process-icon"><i class="bi bi-rocket-takeoff"></i></div>
                         <h5 class="abt-process-title">Implement</h5>
                         <p class="abt-process-desc">We implement and train your team</p>
@@ -438,7 +438,7 @@
                 </div>
                 <div class="col-lg col-md-6">
                     <div class="abt-process-card">
-                        <div class="abt-process-step">05</div>
+                        <div class="abt-process-step">Support</div>
                         <div class="abt-process-icon"><i class="bi bi-headset"></i></div>
                         <h5 class="abt-process-title">Support</h5>
                         <p class="abt-process-desc">We provide continuous support</p>
