--- a/contact-us.html
+++ b/contact-us.html
@@ -289,19 +289,15 @@
         </div>
     </div>
 
-    <!-- ========================================
+   <!-- ========================================
      CONTACT PAGE - PAGE HEADER
 ======================================== -->
 <section class="cnt-page-header">
     <div class="container">
         <div class="cnt-header-content">
-            <h1 class="cnt-page-title">Get In Touch</h1>
+            <span class="cnt-header-badge">Contact Us</span>
+            <h1 class="cnt-page-title">Get In <span class="cnt-title-highlight">Touch</span></h1>
             <p class="cnt-page-subtitle">We'd love to hear from you. Let's discuss how we can help your business grow.</p>
-            <nav class="cnt-breadcrumb">
-                <a href="index.html">Home</a>
-                <span class="cnt-separator">/</span>
-                <span class="cnt-current">Contact</span>
-            </nav>
         </div>
     </div>
 </section>
@@ -318,8 +314,8 @@
                         <i class="bi bi-geo-alt"></i>
                     </div>
                     <h4 class="cnt-info-title">Visit Us</h4>
-                    <p class="cnt-info-text">123 Street, New York, USA</p>
-                    <p class="cnt-info-text">Kolkata, West Bengal, India</p>
+                    <p class="cnt-info-text">A104, Vrundavan Hights</p>
+                    <p class="cnt-info-text">Kharvasa–Dindoli Rd, Surat 394210</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -328,8 +324,8 @@
                         <i class="bi bi-telephone"></i>
                     </div>
                     <h4 class="cnt-info-title">Call Us</h4>
-                    <p class="cnt-info-text">+012 345 6789</p>
-                    <p class="cnt-info-text">+098 765 4321</p>
+                    <p class="cnt-info-text">+91 98049 94398</p>
+                    <a href="tel:+919804994398" class="cnt-info-link">Click to Call</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -339,7 +335,7 @@
                     </div>
                     <h4 class="cnt-info-title">Email Us</h4>
                     <p class="cnt-info-text">info@bexily.com</p>
-                    <p class="cnt-info-text">support@bexily.com</p>
+                    <a href="mailto:info@bexily.com" class="cnt-info-link">Send an Email</a>
                 </div>
             </div>
         </div>
@@ -355,8 +351,9 @@
             <!-- Contact Form -->
             <div class="col-lg-6">
                 <div class="cnt-form-wrapper">
-                    <h2 class="cnt-form-title">Send Us a Message</h2>
-                    <p class="cnt-form-desc">Fill out the form below and we'll get back to you within 24 hours.</p>
+                    <span class="cnt-form-badge">Send a Message</span>
+                    <h2 class="cnt-form-title">We'll Get Back To You <span class="cnt-title-highlight">Within 24 Hours</span></h2>
+                    <p class="cnt-form-desc">Fill out the form below and our team will reach out to you shortly.</p>
 
                     <form class="cnt-form">
                         <div class="row g-3">
@@ -375,7 +372,7 @@
                             <div class="col-md-6">
                                 <div class="cnt-form-group">
                                     <label class="cnt-form-label">Phone Number</label>
-                                    <input type="tel" class="cnt-form-control" placeholder="+1 234 567 8900">
+                                    <input type="tel" class="cnt-form-control" placeholder="+91 00000 00000">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -407,35 +404,35 @@
                 </div>
             </div>
 
-            <!-- Map & Additional Info -->
+            <!-- Map & Office Hours -->
             <div class="col-lg-6">
                 <div class="cnt-map-wrapper">
                     <div class="cnt-map-container">
-                        <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.1396737854646!2d88.36389431495709!3d22.572646085182594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277b027a8d2c5%3A0x8f5b0e6a6b3a8c1a!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1234567890123!5m2!1sen!2sin" 
-                            width="100%" 
-                            height="100%" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.5143048507!2d72.7826!3d21.1501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjHCsDA5JzAwLjQiTiA3MsKwNDYnNTcuNCJF!5e0!3m2!1sen!2sin!4v1234567890"
+                            width="100%"
+                            height="100%"
+                            style="border:0;"
+                            allowfullscreen=""
+                            loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    
+
                     <div class="cnt-office-info">
-                        <h4 class="cnt-office-title">Office Hours</h4>
+                        <h4 class="cnt-office-title"><i class="bi bi-clock me-2"></i>Office Hours</h4>
                         <div class="cnt-office-hours">
                             <div class="cnt-hour-item">
                                 <span class="cnt-day">Monday - Friday</span>
-                                <span class="cnt-time">9:00 AM - 6:00 PM</span>
+                                <span class="cnt-time cnt-time--open">9:00 AM - 6:00 PM</span>
                             </div>
                             <div class="cnt-hour-item">
                                 <span class="cnt-day">Saturday</span>
-                                <span class="cnt-time">10:00 AM - 4:00 PM</span>
+                                <span class="cnt-time cnt-time--open">10:00 AM - 4:00 PM</span>
                             </div>
                             <div class="cnt-hour-item">
                                 <span class="cnt-day">Sunday</span>
-                                <span class="cnt-time">Closed</span>
+                                <span class="cnt-time cnt-time--closed">Closed</span>
                             </div>
                         </div>
                     </div>
@@ -454,23 +451,23 @@
             <h3 class="cnt-social-title">Connect With Us</h3>
             <p class="cnt-social-desc">Follow us on social media for updates, news, and insights</p>
             <div class="cnt-social-links">
-                <a href="#" class="cnt-social-link">
+                <a href="#" class="cnt-social-link cnt-social-fb">
                     <i class="bi bi-facebook"></i>
                     <span>Facebook</span>
                 </a>
-                <a href="#" class="cnt-social-link">
+                <a href="#" class="cnt-social-link cnt-social-tw">
                     <i class="bi bi-twitter"></i>
                     <span>Twitter</span>
                 </a>
-                <a href="#" class="cnt-social-link">
+                <a href="#" class="cnt-social-link cnt-social-li">
                     <i class="bi bi-linkedin"></i>
                     <span>LinkedIn</span>
                 </a>
-                <a href="#" class="cnt-social-link">
+                <a href="#" class="cnt-social-link cnt-social-ig">
                     <i class="bi bi-instagram"></i>
                     <span>Instagram</span>
                 </a>
-                <a href="#" class="cnt-social-link">
+                <a href="#" class="cnt-social-link cnt-social-yt">
                     <i class="bi bi-youtube"></i>
                     <span>YouTube</span>
                 </a>
@@ -480,12 +477,13 @@
 </section>
 
 <!-- ========================================
-     FAQ SECTION (OPTIONAL)
+     FAQ SECTION
 ======================================== -->
 <section class="cnt-faq-section">
     <div class="container">
         <div class="text-center mb-5">
-            <h2 class="cnt-section-title">Frequently Asked Questions</h2>
+            <span class="cnt-header-badge">FAQ</span>
+            <h2 class="cnt-section-title">Frequently Asked <span class="cnt-title-highlight">Questions</span></h2>
             <p class="cnt-section-subtitle">Quick answers to common questions</p>
         </div>
 
@@ -548,10 +546,6 @@
         </div>
     </div>
 </section>
- 
- 
- 
- 
  
  <!-- ========================================
      FOOTER
