--- a/about.html
+++ b/about.html
@@ -658,86 +658,91 @@
         </div>
     </section>
 
-    <!-- footer -->
-    <footer class="footer footer-bg" id="contact">
-        <div class="container">
-            <div class="row g-4">
+    <!-- ========================================
+     FOOTER
+======================================== -->
+<footer class="footer footer-bg" id="contact">
+    <div class="container">
+        <div class="row g-4">
 
-                <!-- Company Info -->
-                <div class="col-lg-4">
-                    <div class="footer-brand">
-                        <img src="assets/images/bexily-new-logo.png" alt="" srcset="" class="navbar-logo" />
-                    </div>
-                    <p class="footer-desc text-white-">India's leading ERP software development company delivering
-                        intelligent,
-                        scalable solutions tailored to your business needs. Over 10 years of excellence.</p>
-                    <div class="mt-4">
-                        <p class="mb-2 text-dark"><i class="bi bi-geo-alt me-2"></i>A104, Vrundavan Hights
-                            Kharvasa–Dindoli Rd, Surat 394210</p>
-                        <p class="mb-2 text-dark"><i class="bi bi-telephone me-2"></i>+91 98049 94398</p>
-                        <p class="mb-0 text-dark"><i class="bi bi-envelope me-2"></i>info@example.com</p>
-                    </div>
-                    <!-- Social Icons -->
-                    <div class="social-icons mt-4">
-                        <a href="javascript:void(0)" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="javascript:void(0)" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="javascript:void(0)" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="javascript:void(0)" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="javascript:void(0)" class="social-icon"><i class="fab fa-youtube"></i></a>
-                    </div>
+            <!-- Company Info -->
+            <div class="col-lg-4">
+                <div class="footer-brand">
+                    <img src="assets/images/bexily-new-logo.png" alt="Bexily" class="navbar-logo" />
+                </div>
+                <p class="footer-desc">India's leading ERP software development company delivering intelligent, scalable solutions tailored to your business needs.</p>
+
+                <div class="footer-divider"></div>
+
+                <div class="footer-contact-info">
+                    <p><i class="bi bi-telephone"></i> +91 98049 94398</p>
+                    <p><i class="bi bi-envelope"></i> info@bexily.com</p>
                 </div>
 
-                <!-- Quick Links -->
-                <div class="col-lg-2 col-md-4">
-                    <h6 class="footer-title">Quick Links</h6>
-                    <ul class="footer-links">
-                        <li><a href="home.html"><i class="fas fa-angle-right"></i> Home</a></li>
-                        <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
-                        <li><a href="#services"><i class="fas fa-angle-right"></i> Our Services</a></li>
-                        <li><a href="#industry"><i class="fas fa-angle-right"></i> Industries</a></li>
-                        <li><a href="contact-us.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
-                    </ul>
+                <!-- Social Icons -->
+                <div class="social-icons mt-3">
+                    <a href="javascript:void(0)" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="javascript:void(0)" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="javascript:void(0)" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="javascript:void(0)" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="javascript:void(0)" class="social-icon"><i class="fab fa-youtube"></i></a>
                 </div>
-
-                <!-- Services -->
-                <div class="col-lg-3 col-md-4">
-                    <h6 class="footer-title">ERP Services</h6>
-                    <ul class="footer-links">
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Custom ERP Development</a>
-                        </li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> ERP Integration</a></li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> ERP Migration</a></li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Maintenance & Support</a>
-                        </li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Industry-Specific
-                                Solutions</a></li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Cloud-Based Solutions</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Industries -->
-                <div class="col-lg-3 col-md-4">
-                    <h6 class="footer-title">Industries</h6>
-                    <ul class="footer-links">
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Textile Industry</a></li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Garment Manufacturing</a>
-                        </li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Finance & Accounting</a>
-                        </li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Healthcare</a></li>
-                        <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> View All Industries</a></li>
-                    </ul>
-                </div>
-
             </div>
 
-            <!-- Footer Bottom -->
-            <div class="footer-bottom text-dark">
-                <p>&copy; 2026 Bexily. All Rights Reserved.</p>
+            <!-- Quick Links -->
+            <div class="col-lg-2 col-md-4">
+                <h6 class="footer-title">Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="home.html"><i class="fas fa-angle-right"></i> Home</a></li>
+                    <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
+                    <li><a href="#services"><i class="fas fa-angle-right"></i> Our Services</a></li>
+                    <li><a href="#industry"><i class="fas fa-angle-right"></i> Industries</a></li>
+                    <li><a href="contact-us.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
+                </ul>
             </div>
+
+            <!-- ERP Services -->
+            <div class="col-lg-3 col-md-4">
+                <h6 class="footer-title">ERP Services</h6>
+                <ul class="footer-links">
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Custom ERP Development</a></li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> ERP Integration</a></li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> ERP Migration</a></li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Maintenance & Support</a></li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Industry-Specific Solutions</a></li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-angle-right"></i> Cloud-Based Solutions</a></li>
+                </ul>
+            </div>
+
+            <!-- Our Offices -->
+            <div class="col-lg-3 col-md-4">
+                <h6 class="footer-title">Our Offices</h6>
+
+                <div class="footer-office-card">
+                    <div class="footer-office-city">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>Surat, Gujarat</span>
+                    </div>
+                    <p class="footer-office-address">A104, Vrundavan Hights, Kharvasa–Dindoli Rd, Surat 394210</p>
+                </div>
+
+                <div class="footer-office-card">
+                    <div class="footer-office-city">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>Kolkata, West Bengal</span>
+                    </div>
+                    <p class="footer-office-address">Kolkata, West Bengal, India</p>
+                </div>
+            </div>
+
         </div>
-    </footer>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom text-dark">
+            <p>&copy; 2026 Bexily. All Rights Reserved.</p>
+        </div>
+    </div>
+</footer>
 
 
     <!-- Bootstrap JS -->
